--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Annie-Huang/sass-made-easy#readme",
   "devDependencies": {
+    "parcel-bundler": "^1.12.4",
     "sass": "^1.32.5"
   }
 }
